--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "license": "MIT",
   "scripts": {
-    "dev": "babel-node src/chooser.js",
+    "dev": "ts-node src/chooser.ts",
     "start": "yarn dev",
     "build": "webpack && cp install.sh dist && cp -R configs dist",
     "postinstall": "patch-package",
@@ -10,21 +10,20 @@
   "dependencies": {
     "chalk": "^4.0.0",
     "consola": "^2.12.2",
-    "eslint": "^7.1.0",
     "execa": "^4.0.2",
     "inquirer": "^7.1.0",
     "listr": "^0.14.3",
-    "ncp": "^2.0.0",
     "patch-package": "^6.2.2",
     "postinstall-postinstall": "^2.1.0",
-    "zen-observable": "^0.8.15"
+    "rxjs": "^6.5.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.0",
-    "@babel/node": "^7.8.7",
-    "@babel/plugin-transform-runtime": "^7.10.1",
-    "@babel/preset-env": "^7.10.1",
-    "babel-loader": "^8.1.0",
+    "@types/inquirer": "^6.5.0",
+    "@types/listr": "^0.14.2",
+    "@types/zen-observable": "^0.8.0",
+    "ts-loader": "^7.0.5",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   }
