feat(plugins): add new plugins.yaml file for k9s with pretty logs commands fix(update.sh): update script to copy plugins.yaml from user's k9s directory fix(settings.json): add gitlens views configuration for better SCM visibility fix(iterm2): update com.googlecode.iterm2.plist to reflect recent changes

--- a/settings.json
+++ b/settings.json
@@ -113,6 +113,19 @@
   "files.insertFinalNewline": true,
   "git.autofetch": true,
   "gitlens.graph.layout": "editor",
+  "gitlens.views.scm.grouped.views": {
+    "branches": true,
+    "commits": true,
+    "contributors": true,
+    "fileHistory": false,
+    "launchpad": false,
+    "remotes": true,
+    "repositories": true,
+    "searchAndCompare": false,
+    "stashes": true,
+    "tags": true,
+    "worktrees": true
+  },
   "importCost.mediumPackageDarkColor": "goldenrod",
   "importCost.mediumPackageLightColor": "goldenrod",
   "importCost.smallPackageDarkColor": "grey",
